# smartsummary

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  auth.py  deploy.sh  docker-compose.yml  export_session.py  pyproject.toml
app/: bitrix.py  chat_state.py  compliments.py  config.py  date_experiment.py  jira.py  main.py  monitor.py  summarizer.py  telegram_client.py  utils.py
app/api/: routes.py
app/services/: ai_client.py  bitrix_client.py  jira_client.py  telegram_service.py
app/triggers/: __init__.py  auto_reply.py  free_slots.py  jira_task.py  meeting.py  summarize.py
